XMLtoCSV/objects/unpackaged/objects/Requirement_vod__c.object
<CustomObject>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>Type of request.</description>
        <inlineHelpText>If you are unsure of the type of request you are submitting, please select Unknown.</inlineHelpText>
        <label>Requirement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bug Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exploria Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interface Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform Upgrade (Force.com)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Enhancement</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Requesting_Business_Unit__c</fullName>
        <label>Requesting Business Units</label>
        <picklist>
            <picklistValues>
                <fullName>Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requests_Submitted_by_IT__c</fullName>
        <formula>IF((INCLUDES( Impacted_Business__c , &quot;Technology&quot;)), 1, 0)</formula>
        <label>Requests Submitted by IT</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requirement_Date__c</fullName>
        <label>Requirement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requirement_Description__c</fullName>
        <description>Gathers further details for requirements.</description>
        <inlineHelpText>Detailed Summary* 
Screen(s) Impacted* 
Field Name(s) &amp; Type(s)* 
Picklist Values 
Calculation 
Dependency 
Workflow/Approval Rules 
Interfacing System Updates 
Interface Frequency 
Data Volumes 
*Indicates information required for all requests!</inlineHelpText>
        <label>Requirement Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requirement_Requestor__c</fullName>
        <label>Requirement Requestor</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requirement_Title__c</fullName>
        <description>Captures the requirement title</description>
        <inlineHelpText>Captures the requirement title</inlineHelpText>
        <label>Requirement Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIT__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for completing SIT.</description>
        <inlineHelpText>Number of days estimated for completing SIT.</inlineHelpText>
        <label>Test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solution_Detail__c</fullName>
        <label>Solution Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Type__c</fullName>
        <label>Solution Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Configuration Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requires Custom Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Supported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_PMO__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Identify: New Requirement</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Identify: Submit for Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identify: Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidate: Approve to Estimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approve: Approved to Deploy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release: Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release: Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release: SIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release: UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release: Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close: Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close: Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close: Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veeva Roadmap: Submit for Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veeva Roadmap Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidate: Pending PMO Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release: Ready to Migrate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veeva Roadmap: On Roadmap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veeva Roadmap: Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Info Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Test in SBX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Migration to Prod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Test in Prod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veeva Roadmap</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Process__c</fullName>
        <inlineHelpText>Include information about the impacts the functionality will have to the end user. Specifically, what they will see on the interface, how often the data will be updated, etc.</inlineHelpText>
        <label>Sub-Process</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_Impact_Value__c</fullName>
        <formula>CASE(
Support_Impact__c ,
&quot;HIGH&quot; , 1, 
&quot;MEDIUM&quot;, 2, 
&quot;Low&quot;, 3, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Impact Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Impact__c</fullName>
        <inlineHelpText>Will Minimally Impact Support
(i.e., low degree of training and documentation)</inlineHelpText>
        <label>Support Impact</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Impacted__c</fullName>
        <description>List of applications impacted by SFA change requests.</description>
        <inlineHelpText>List of SaaS applications.</inlineHelpText>
        <label>Impacted Applications</label>
        <picklist>
            <picklistValues>
                <fullName>Data Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware - Field User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware - HQ User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Technical_Description__c</fullName>
        <label>Technical Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Case__c</fullName>
        <label>Test Case</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Comments__c</fullName>
        <label>Test Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Status__c</fullName>
        <label>Test Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Tested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tested in SBX – Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tested in SBX – Unsuccessful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tested in Prod – Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tested in Prod – Unsuccessful</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tested_By__c</fullName>
        <label>Tested By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotEst__c</fullName>
        <description>Total estimated value.</description>
        <formula>( Req__c  +  Des__c  +  BUT__c  +  SIT__c  +  UAT__c  +  TrnDep__c  +  Adapt__c )+  
( 1*Cont__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total estimated value.</inlineHelpText>
        <label>Total Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Actual__c</fullName>
        <formula>Actual_Requirements_Gathering__c +  Actual_Design__c +  Actual_Build_Unit_Test__c +  Actual_SIT__c  +  Actual_UAT__c  +  Actual_Train_Deploy__c +  Actual_Adapt_Ongoing_Support__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Priority_Ranking__c</fullName>
        <formula>( Business_Benefit_Value__c * 0.20 + Urgency_of_Request_Value__c * 0.12 + End_User_Impact_Value__c * 0.12+ Legal_Compliance_Value__c * 0.20 + Support_Impact_Value__c * 0.12+ Level_of_Business_Effort_Value__c * 0.12 + Level_of_IT_Effort_Value__c * 0.12 ) / 7</formula>
        <label>Total Priority Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Variance__c</fullName>
        <formula>TotEst__c  -  Total_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of days.</description>
        <inlineHelpText>Total number of days estimated.</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrnDep__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for Training and Deploying.</description>
        <inlineHelpText>Number of days estimated for Training and Deploying.</inlineHelpText>
        <label>Deploy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UAT__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated to complete UAT.</description>
        <inlineHelpText>Number of days estimated to complete UAT.</inlineHelpText>
        <label>UAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgency_of_Request_Value__c</fullName>
        <description>Value is calculated by the selection of the Urgency of Request field.</description>
        <formula>CASE(
 Urgency_of_Request__c ,
&quot;HIGH&quot; , 3, 
&quot;MEDIUM&quot;, 2, 
&quot;Low&quot;, 1, 
0 
)</formula>
        <inlineHelpText>Value is calculated by the selection of the Urgency of Requirement field: 
High = 3 
Medium = 2 
Low = 1</inlineHelpText>
        <label>Urgency of Requirement Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgency_of_Request__c</fullName>
        <inlineHelpText>Low: Not required within the next 90 days to enable a business process 
Medium: Required within the next 46 – 90 days to enable a business process 
High: Required within the next 30 – 45 days to enable a business process</inlineHelpText>
        <label>Urgency of Requirement</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Impact_of_Change_Value__c</fullName>
        <description>Value is calculated by the User Impact of Change field.</description>
        <formula>CASE(
 User_Impact_of_Change__c ,
&quot;High&quot;,1,
&quot;Medium&quot;,2,
3
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value is calculated by the User Impact of Change field: 
High = 1 
Medium = 2 
Low = 3</inlineHelpText>
        <label>User Impact of Change Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Impact_of_Change__c</fullName>
        <inlineHelpText>Low: Will Significantly Impact Users (high degree of adoption with significant effort) 
Medium: Will Moderately Impact Users (high degree of adoption with moderate effort) 
High: Will Minimally Impact Users (high degree of adoption with minimal effort)</inlineHelpText>
        <label>User Impact of Change</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Requirement_Area__c</fullName>
        <label>User Requirement Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Veeva_Build_Date__c</fullName>
        <label>Veeva Build Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Veeva_Configuration_Complexity__c</fullName>
        <label>Veeva Configuration Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Veeva_Design_Date__c</fullName>
        <label>Veeva Design Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Veeva_ID__c</fullName>
        <label>Veeva ID</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Veeva_Out_Of_Box__c</fullName>
        <label>Veeva Out Of Box</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Veeva_Rank__c</fullName>
        <label>Veeva Rank</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Veeva_Status__c</fullName>
        <label>Veeva Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current Veeva Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit for Roadmap Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadmap Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadmap Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadmap Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadmap Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadmap Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadmap Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Planned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Requirement</label>
    <listViews>
        <fullName>All_Requirements</fullName>
        <columns>NAME</columns>
        <columns>Requirement_Title__c</columns>
        <columns>Process__c</columns>
        <columns>Status_PMO__c</columns>
        <columns>Requirement_Description__c</columns>
        <columns>Comments__c</columns>
        <columns>Production_Release_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Requirements</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MS_All_Requirements</fullName>
        <columns>NAME</columns>
        <columns>Process__c</columns>
        <columns>Requirement_Title__c</columns>
        <columns>Status_PMO__c</columns>
        <columns>Requirement_Description__c</columns>
        <columns>Production_Release_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Requirement_vod__c.MS_SMB_Record_Type</value>
        </filters>
        <label>MS All Requirements</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MS_Closed_Requirements</fullName>
        <columns>NAME</columns>
        <columns>Process__c</columns>
        <columns>Requirement_Title__c</columns>
        <columns>Status_PMO__c</columns>
        <columns>Requirement_Description__c</columns>
        <columns>Production_Release_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_PMO__c</field>
            <operation>equals</operation>
            <value>Completed,Deferred,Duplicate,Cancelled,Veeva Roadmap</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Requirement_vod__c.MS_SMB_Record_Type</value>
        </filters>
        <label>MS Closed Requirements</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MS_Open_Requirements</fullName>
        <columns>NAME</columns>
        <columns>Process__c</columns>
        <columns>Requirement_Title__c</columns>
        <columns>Status_PMO__c</columns>
        <columns>Requirement_Description__c</columns>
        <columns>Production_Release_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_PMO__c</field>
            <operation>notEqual</operation>
            <value>Completed,Deferred,Duplicate,Cancelled,Veeva Roadmap</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Requirement_vod__c.MS_SMB_Record_Type</value>
        </filters>
        <label>MS Open Requirements</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Requirement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <recordTypes>
        <fullName>Business_Requirement_Record_Type</fullName>
        <active>true</active>
        <label>Business Requirement Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Functional_Requirement_Record_Type</fullName>
        <active>false</active>
        <description>Used for managing FR records</description>
        <label>Functional Requirement Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>MS_SMB_Record_Type</fullName>
        <active>true</active>
        <description>Used for managing Managed Serviced and SMB requirements</description>
        <label>MS/SMB Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Requirement_Record_Type</fullName>
        <active>false</active>
        <description>Used for managing UR records</description>
        <label>User Requirement Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Positive_Effort</fullName>
        <active>true</active>
        <description>All numbers entered under level of effort should be positive.</description>
        <errorConditionFormula>OR( Adapt__c &lt; 0,  BUT__c &lt; 0, Des__c &lt; 0, SIT__c &lt; 0, TrnDep__c &lt; 0, UAT__c &lt;0, Req__c &lt;0)</errorConditionFormula>
        <errorMessage>Please enter a value greater than 0 for fields under Total Level of Effort.</errorMessage>
    </validationRules>
</CustomObject>